css/splash.css
/*  ==========================================================================
    global styles
    ========================================================================== */
    body {
        margin: 0; background: #454a51; -webkit-text-size-adjust: 100%;
    }
    @font-face {
        font-family: 'MuseoSans';
        src: url('museosans-100-webfont.eot');
        src: url('museosans-100-webfont.eot?#iefix') format('embedded-opentype'),
             url('museosans-100-webfont.woff') format('woff'),
             url('museosans-100-webfont.svg#museo_sans100') format('svg'),
             url('museosans-100-webfont.ttf') format('truetype');
        font-weight: 100;
        font-style: normal;
    }
    a {
        color: #2074c9;
    }

/*  ==========================================================================
    helper classes
    ========================================================================== */
    .clearfix:before,
    .clearfix:after {
        content: ' ';
        display: table;
    }
    .clearfix:after {
        clear: both;
    }

/*  ==========================================================================
    c6-splash classes
    ========================================================================== */
    .splash__group {
        position: absolute; font-size: 1em; width: 100%; overflow-x: hidden;
        font-family: 'MuseoSans', Arial, Helvetica, sans-serif; font-weight:100; color:#444;
        border-top: 4px solid #2074c9; border-bottom: 4px solid #454a51;
        background: url(../img/branching-bg.png) #fff no-repeat 50% 7.375rem;
    }
        .c6-logo__img { 
            margin: 3em 0 0; width: 9.625rem;
        }
        .mobile__group {
            display:none;
        }
        .desktop__group {
            display:block;
        }

    .copy__group {
        margin: 0 auto; max-width: 35rem;/*560px*/ padding: 0 0.625em 0; text-align: center; 
    }
        .copy__title {
            font-size: 2.75em;/*44px*/ margin: 2em auto 0.75em; font-weight:100; line-height: 1.36;
        }
        .copy__subtitle {
            display:none;
        }
        .copy__p {
            line-height: 1.75; text-align: left; margin: 0.5625em auto; width: 80%;
        }
        .copy__legal {
            font-size: 0.75em;/*12px*/ width:100%; color: #aaa; margin: 22.667em 0 2.5em;
        }

    .ipad__img, .iphone__img {
        position: absolute;
    }
        .ipad__img {
            top: 5.25rem; left: -4.125rem; width: 17.875rem;/*286px*/ height: 755px;
            background: url(../img/mr-ipad.png) no-repeat center left / contain;
        }
        .iphone__img {
            top: 6.75rem; right: -3.75rem; width: 11.25rem;/*180x*/ height: 727px;
            background: url(../img/mr-iphone.png) no-repeat center right / contain;
        }

    .ipad__tooltip, .iphone__tooltip {
        position: absolute; top: 18em; font-size: 0.875em;/*14px*/ line-height: 1.428;
        width: 10.2857em; height: 5.2857em; padding: 0.5714em 0.85714em 1.14285em; border-radius: 5px;
        background: #d94040; border: 2px solid #fff; color: #fff;
        display: none;
    }
        .ipad__tooltip {
            text-align: left; left: 19.5em;
        }
            /* css arrow */
            .ipad__tooltip:after, .ipad__tooltip:before {
                position: absolute; height: 0; width: 0; right: 100%; top: 20%;
                content: " "; border: solid transparent; pointer-events: none;
            }
            .ipad__tooltip:after {
                border-color: rgba(217, 64, 64, 0); border-right-color: #d94040;
                border-width: 4px; margin-top: -4px;
            }
            .ipad__tooltip:before {
                border-color: rgba(194, 225, 245, 0); border-right-color: #fff;
                border-width: 7px; margin-top: -7px;
            }
        .iphone__tooltip {
            text-align: right; right: 11.5em;
        }
            /* css arrow */
            .iphone__tooltip:after, .iphone__tooltip:before {
                position: absolute;height: 0; width: 0; left: 100%; top: 20%;
                content: " "; border: solid transparent; pointer-events: none;
            }
            .iphone__tooltip:after {
                border-color: rgba(217, 64, 64, 0); border-left-color: #d94040;
                border-width: 4px; margin-top: -4px;
            }
            .iphone__tooltip:before {
                border-color: rgba(194, 225, 245, 0); border-left-color: #fff;
                border-width: 7px; margin-top: -7px;
            }


    @media screen and (min-width: 470px) and (max-width: 1016px) {
        /* small desktop sizes */
        .ipad__img {
            width: 10.875rem; height: 27.75rem; left: -3.25em; top: 9em;
        }
            .ipad__tooltip { 
                left: 11.5em;
            }
        .iphone__img {
            width: 7.125rem; height: 28.625rem; right: -2rem; top: 9em;
        }
            .iphone__tooltip { 
                right: 7em;
            }
        .copy__group {
            max-width: 26rem;
        }
            .copy__title {
                font-size: 1.75em;/*28px*/
            }
            .copy__legal {
                margin: 17.667em 0 2.5em;
            }
    }

    @media screen and (min-width: 470px) and (max-width: 560px) and (orientation: landscape) {
        .ipad__img {
            left: -4em;
        }
    }

    @media screen and (min-width: 470px) and (max-width: 670px) {
        .copy__title {
            width: 70%;
        }
        .copy__p {
            width: 60%;
        }
    }


    @media screen and (max-width: 470px) {
        /* mobile version*/
        .splash__group {
            min-width: 320px;  background-size: 21.375rem; background-position: 50% 0;
        }
            .desktop__group {
                display:none;
            }
            .mobile__group {
                display:block;
            }
                .mobile__block {
                    height: 19rem;
                }
        .c6-logo__img {
            margin: 0 0 5.5625em;
        }
        .copy__group {
            width: 100%; padding: 3em 0 0;
        }
            .copy__title {
                font-size: 1.75em;/*28px*/ line-height: 1.28;
                text-align: left; padding: 1.357em 0 0; margin: 0;
            }
            .copy__subtitle {
                display: block; font-size: 1em; font-weight: 100;
                text-align: left; margin: 1.375em 0 0 0;
            }
            .copy__p {
                width: auto; margin: 2.625em 0 0; padding: 0 0 0 1.5625em;
            }
            .copy__callout {
                margin: 3.4375em 0 0;
            }
            .copy__legal {
               margin: 15.333em 0 2.5em;
            }

        .ipad__img, .iphone__img {
            position: static;
        }
            .ipad__img {
                height: 19.5rem; width: 7.3125rem; float: left;
            }
            .iphone__img {
                height: 26.75rem; width: 6.25rem; float: right; margin-top: -2.5rem;
            }

        .ipad__tooltip, .iphone__tooltip {
            display:none;
        }
    }

